# NCEP_Shared

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  README.md
.circleci/: config.yml
NCEP_bacio/: CMakeLists.txt  GNUmakefile  GNUmakefile_rnin  Makefile  Makefile.conf.AIX  Makefile.conf.IRIX  Makefile.conf.IRIX64  Makefile.conf.Linux  Makefile.conf.Linux.IA64.ifort  Makefile.conf.OSF1  Makefile.conf.SUPER-UX  Makefile.depend  bacio.c  clib4.h  clib8.h
NCEP_bufr/: CMakeLists.txt  GNUmakefile  GNUmakefile_rnin  README.libbufr  arallocf.F  bufrlib.PRM  bvers.f  moda_mstabs.F  preproc.sh  rdmtbb.f  rdmtbd.f  sntbbe.f  sntbde.f
NCEP_crtm/: .cvsignore  ADA_Module.f90  CMakeLists.txt  CRTM_Adjoint_Module.f90  CRTM_AtmOptics.f90  CRTM_Forward_Module.f90  CRTM_K_Matrix_Module.f90  CRTM_Parameters.f90  CRTM_RTSolution_Define.f90  CRTM_SpcCoeff.f90  Common_RTSolution.f90  EDD_Module.f90  Endian_Utility.f90  File_Utility.f90  GNUmakefile  JCSDA_crtm  NESDIS_ATMS_SeaICE_Module.f90  ODPS_Define.f90  ODPS_Predictor_Define.f90  P2S_Module.f90  RTV_Define.f90  SOI_Module.f90  ignore.mk  make.filelist
NCEP_crtm/JCSDA_crtm/src/: CRTM_Tangent_Linear_Module.f90
NCEP_crtm/JCSDA_crtm/src/AtmAbsorption/ODPS/: ODPS_AtmAbsorption.f90  ODPS_Predictor.f90
NCEP_crtm/JCSDA_crtm/src/AtmOptics/: CRTM_AtmOptics_Define.f90
NCEP_crtm/JCSDA_crtm/src/AtmScatter/: CRTM_AerosolScatter.f90  CRTM_CloudScatter.f90
NCEP_crtm/JCSDA_crtm/src/Coefficients/TauCoeff/ODPS/: ODPS_Binary_IO.f90  ODPS_TauCoeff.f90
NCEP_crtm/JCSDA_crtm/src/InstrumentInfo/SensorInfo/: SensorInfo_Parameters.f90
NCEP_crtm/JCSDA_crtm/src/RTSolution/: CRTM_RTSolution.f90  Common_RTSolution.f90
NCEP_crtm/JCSDA_crtm/src/RTSolution/Emission/: Emission_Module.f90
NCEP_crtm/test/: .cvsignore  check_crtm.fpp
NCEP_crtm/test/CVS/: Entries  Repository  Root  Tag
NCEP_gfsio/: CMakeLists.txt  GNUmakefile  gfsio_module.f90  gfsio_solve_axb.F90  makefile_4
NCEP_nemsio/: CMakeLists.txt  GNUmakefile
NCEP_sfcio/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.conf.AIX  Makefile.conf.IRIX64  Makefile.conf.Linux  Makefile.conf.Linux.IA64.ifort  Makefile.conf.OSF1  configure  makefile_4  sfcio_module.f90  testsfcio.f90
NCEP_sigio/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.conf.AIX  Makefile.conf.IRIX  Makefile.conf.IRIX64  Makefile.conf.Linux  Makefile.conf.Linux.IA64.efc  Makefile.conf.Linux.IA64.ifort  Makefile.conf.OSF1  sigio_module.f90  testsigio.f90
NCEP_sp/: CMakeLists.txt  GNUmakefile  GNUmakefile_rnin  Makefile  imax_verify.h  sgi_fft.f  spffte.f  spfftesgi.f  splat.f  splateqg.f  sptranf0.f  sptranf1.f  t_imax_verify.f
NCEP_w3/: CMakeLists.txt  GNUmakefile_rnin  Makefile  Makefile.conf.AIX  Makefile.conf.IRIX  Makefile.conf.IRIX64  Makefile.conf.Linux  Makefile.conf.Linux.IA64.ifort  Makefile.conf.OSF1  README  gbytes.f  iw3unpbf.f  lengds.f  putgben.f  putgbn.f  w3cnvtov.f  w3ersunb.f  w3fi04.f  w3fi63.f  w3fi71.f  w3rtveds.f  w3rtvunp.f  w3tovmnd.f  w3unpkb7.f
